<resources>
    <string name="app_name">TokopaARYA</string>

    <string name="btn_ob_lewati">Lewati</string>
    <string name="btn_ob_selanjutnya">Selanjutnya</string>
    <string name="btn_ob_gabung">Gabung Sekarang</string>

    <string name="appbar_login">Masuk</string>
    <string name="appbar_register">Daftar</string>
    <string name="appbar_profile">Profil</string>
    <string name="appbar_main">John Doe</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Nama</string>

    <string name="ti_search" translatable="false">Search</string>

    <string name="btn_login">Masuk</string>
    <string name="btn_finish">Selesai</string>
    <string name="btn_register">Daftar</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_store">Store</string>
    <string name="bottom_nav_wishlist">Wishlist</string>
    <string name="bottom_nav_transaction">Transaction</string>

    <string name="tv_separator_register">atau daftar dengan</string>
    <string name="tv_separator_login">atau masuk dengan</string>
    <string name="tv_t_n_c_register"><![CDATA[Dengan daftar disini, kamu menyetujui Syarat & Ketentuan serta Kebijakan Privasi TokoPhincon.]]></string>
    <string name="tv_t_n_c_login"><![CDATA[Dengan masuk disini, kamu menyetujui Syarat & Ketentuan serta Kebijakan Privasi TokoPhincon.]]></string>

    <string name="error_text_email">Email tidak valid</string>
    <string name="error_text_email_blank">Email tidak boleh kosong</string>
    <string name="error_text_password">Password tidak valid</string>
    <string name="error_text_password_blank">Password tidak boleh kosong</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_notification">Notifikasi</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_reviews">Ulasan</string>
    <string name="btn_logout">Logout</string>
    <string name="error_title">Error Title</string>
    <string name="error_description">Error Description</string>
    <string name="error_btn">Button</string>
    <string name="loc_english">EN</string>
    <string name="loc_indonesian">ID</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
</resources>