<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prelogin.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/appbar_register"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/separator_topbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/hint_email"
        app:errorTextColor="@color/red_error"
        app:helperText="Contoh: test@gmail.com"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_topbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/hint_password"
        app:errorTextColor="@color/red_error"
        app:helperText="Contoh: test@gmail.com"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="@id/ti_password"
        app:layout_constraintStart_toStartOf="@id/ti_password"
        app:layout_constraintTop_toBottomOf="@id/ti_password" />

    <View
        android:id="@+id/separator_login_register_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray_line"
        app:layout_constraintBottom_toBottomOf="@+id/tv_separator"
        app:layout_constraintEnd_toStartOf="@id/tv_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_separator" />

    <TextView
        android:id="@+id/tv_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_separator_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <View
        android:id="@+id/separator_login_register_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray_line"
        app:layout_constraintBottom_toBottomOf="@+id/tv_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_separator"
        app:layout_constraintTop_toTopOf="@+id/tv_separator" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="@id/separator_login_register_2"
        app:layout_constraintStart_toStartOf="@id/separator_login_register_1"
        app:layout_constraintTop_toBottomOf="@id/tv_separator" />

    <TextView
        android:id="@+id/tv_t_n_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingHorizontal="27dp"
        android:text="@string/tv_t_n_c_register"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>