<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/appbar_profile"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/separator_topbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_profile" />

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_topbar"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="@string/hint_username"
        app:errorTextColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_photo"
        app:placeholderText="John Doe">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_finish"
        app:layout_constraintEnd_toEndOf="@id/ti_username"
        app:layout_constraintStart_toStartOf="@id/ti_username"
        app:layout_constraintTop_toBottomOf="@id/ti_username" />

    <TextView
        android:id="@+id/tv_t_n_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingHorizontal="27dp"
        android:text="@string/tv_t_n_c_register"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_finish" />

</androidx.constraintlayout.widget.ConstraintLayout>