<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnboardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ob_gabung"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/btn_ob_gabung"
        app:layout_constraintEnd_toEndOf="@id/view_pager"
        app:layout_constraintStart_toStartOf="@id/view_pager"
        app:layout_constraintTop_toBottomOf="@id/view_pager" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/btn_ob_gabung"
        app:layout_constraintStart_toStartOf="@id/btn_ob_gabung"
        app:layout_constraintTop_toBottomOf="@+id/btn_ob_gabung"
        app:tabBackground="@drawable/selector_tab_dot"
        app:tabGravity="center"
        app:tabIndicator="@null"
        app:tabPaddingEnd="12dp"
        app:tabPaddingStart="12dp" />

    <Button
        android:id="@+id/btn_ob_lewati"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_ob_lewati"
        android:textColor="@color/purple"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/btn_ob_gabung" />

    <Button
        android:id="@+id/btn_ob_selanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_ob_selanjutnya"
        android:textColor="@color/purple"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/btn_ob_gabung" />


</androidx.constraintlayout.widget.ConstraintLayout>